# Tuner

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  recovered_test_hardware_setup_wizard.py  test_hardware_setup_wizard.cpython-314-pytest-9.0.2.py
.github/workflows/: linux-build.yml
cpp/: CMakeLists.txt  README.md
cpp/.claude/: settings.local.json
cpp/app/: main.cpp  theme.hpp
cpp/app/shell/: ecu_connection.cpp  ecu_connection.hpp
cpp/app/tabs/: history_tab.cpp  history_tab.hpp  triggers_simulate_panel.cpp  triggers_simulate_panel.hpp
cpp/app/ui/: styles.cpp  styles.hpp
cpp/app/widgets/: bar_gauge_widget.cpp  bar_gauge_widget.hpp  dial_gauge_widget.cpp  dial_gauge_widget.hpp  draggable_card_label.cpp  draggable_card_label.hpp  dyno_chart_widget.cpp  dyno_chart_widget.hpp  editable_curve_chart_widget.cpp  editable_curve_chart_widget.hpp  histogram_widget.cpp  histogram_widget.hpp  led_gauge_widget.cpp  led_gauge_widget.hpp  log_timeline_widget.cpp  log_timeline_widget.hpp  painted_heatmap_widget.cpp  painted_heatmap_widget.hpp  table_surface_3d_view.cpp  table_surface_3d_view.hpp  trigger_scope_widget.cpp  trigger_scope_widget.hpp
cpp/bindings/: tuner_core_module.cpp
cpp/cmake/: pi3-toolchain.cmake
cpp/include/tuner_core/: afr_target_generator.hpp  airbear_api.hpp  autotune_filter_gate_evaluator.hpp  bench_simulator_config_codec.hpp  bench_simulator_controller.hpp  bench_simulator_protocol.hpp  bench_simulator_wheel_pattern_catalog.hpp  board_detection.hpp  boost_table_generator.hpp  chart_axes.hpp  compressor_map_modeling.hpp  curve_page_builder.hpp  curve_page_classifier.hpp  dashboard_layout.hpp  datalog_import.hpp  datalog_profile.hpp  datalog_replay.hpp  datalog_review.hpp  definition_layout.hpp  ecu_definition_compiler.hpp  evidence_replay.hpp  evidence_replay_comparison.hpp  evidence_replay_formatter.hpp  firmware_capabilities.hpp  firmware_catalog.hpp  firmware_flash_builder.hpp  flash_preflight.hpp  flash_target_detection.hpp  gauge_color_zones.hpp  generator_types.hpp  hardware_presets.hpp  hardware_setup_generator_context.hpp  hardware_setup_summary.hpp  hardware_setup_validation.hpp  idle_rpm_generator.hpp  ignition_trigger_cross_validation.hpp  ini_autotune_sections_parser.hpp  ini_constants_extensions_parser.hpp  ini_constants_parser.hpp  ini_controller_commands_parser.hpp  (+95 more)
cpp/src/: afr_target_generator.cpp  airbear_api.cpp  autotune_filter_gate_evaluator.cpp  bench_simulator_config_codec.cpp  bench_simulator_controller.cpp  bench_simulator_protocol.cpp  bench_simulator_wheel_pattern_catalog.cpp  board_detection.cpp  boost_table_generator.cpp  chart_axes.cpp  compressor_map_modeling.cpp  curve_page_builder.cpp  curve_page_classifier.cpp  dashboard_layout.cpp  datalog_import.cpp  datalog_profile.cpp  datalog_replay.cpp  datalog_review.cpp  definition_layout.cpp  ecu_definition_compiler.cpp  evidence_replay.cpp  evidence_replay_comparison.cpp  evidence_replay_formatter.cpp  firmware_capabilities.cpp  firmware_catalog.cpp  firmware_flash_builder.cpp  flash_preflight.cpp  flash_target_detection.cpp  gauge_color_zones.cpp  hardware_presets.cpp  hardware_setup_generator_context.cpp  hardware_setup_summary.cpp  hardware_setup_validation.cpp  idle_rpm_generator.cpp  ignition_trigger_cross_validation.cpp  ini_autotune_sections_parser.cpp  ini_constants_extensions_parser.cpp  ini_constants_parser.cpp  ini_controller_commands_parser.cpp  ini_curve_editor_parser.cpp  (+94 more)
cpp/tests/: test_afr_target_generator.cpp  test_airbear_api.cpp  test_autotune_filter_gate_evaluator.cpp  test_bench_simulator_config_codec.cpp  test_bench_simulator_controller.cpp  test_bench_simulator_protocol.cpp  test_bench_simulator_wheel_pattern_catalog.cpp  test_board_detection.cpp  test_chart_axes.cpp  test_compressor_map_modeling.cpp  test_curve_page_builder.cpp  test_curve_page_classifier.cpp  test_datalog_import.cpp  test_datalog_profile.cpp  test_datalog_replay.cpp  test_datalog_review.cpp  test_definition_layout.cpp  test_ecu_definition_compiler.cpp  test_end_to_end.cpp  test_evidence_replay.cpp  test_evidence_replay_comparison.cpp  test_evidence_replay_formatter.cpp  test_firmware_capabilities.cpp  test_firmware_catalog.cpp  test_firmware_flash_builder.cpp  test_flash_preflight.cpp  test_flash_target_detection.cpp  test_gauge_color_zones.cpp  test_hardware_presets.cpp  test_hardware_setup_generator_context.cpp  test_hardware_setup_summary.cpp  test_hardware_setup_validation.cpp  test_idle_rpm_generator.cpp  test_ignition_trigger_cross_validation.cpp  test_ini_autotune_sections_parser.cpp  test_ini_constants_extensions_parser.cpp  test_ini_constants_parser.cpp  test_ini_controller_commands_parser.cpp  test_ini_curve_editor_parser.cpp  test_ini_defines_parser.cpp  (+94 more)
docs/: README.md  architecture.md  engine-model-reference.md  engine_model_reference.md  handoff_2026-05-11.md  implementation-prompt.md  implementation_backlog_tuner.md  main_cpp_refactor_plan.md  operator-manual.md  pdf_links.txt  protocol-notes.md  qt-abi-unlock-plan.md  reconstruction-spec.md  thingsinoticed.txt  ts-source-observations.md  tuning-roadmap.md  ux-design.md
scripts/: convert_to_native.py
src/tuner/: __init__.py
tests/fixtures/: Ford300_TwinGT28_BaseStartup.msq  Ford300_TwinGT28_BaseStartup_u16p2_experimental.msq  speeduino-dropbear-v2.0.1-base-tune.msq  speeduino-dropbear-v2.0.1-u16p2-experimental.ini  speeduino-dropbear-v2.0.1.ini  speeduino_minimal.ini
tests/integration/: test_protocol_client.py  test_xcp_client.py  test_xcp_controller_client.py
tests/unit/: test_active_settings_persistence.py  test_afr_target_generator_service.py  test_autotune_filter_gate_evaluator.py  test_blank_table_materialization.py  test_board_detection_service.py  test_controller_commands_parser.py  test_cpp_autotune_filter_gate_evaluator_parity.py  test_cpp_board_detection_parity.py  test_cpp_ecu_definition_compiler_parity.py  test_cpp_evidence_replay_comparison_parity.py  test_cpp_firmware_flash_builder_parity.py  test_cpp_flash_target_detection_parity.py  test_cpp_gauge_color_zones_parity.py  (+161 more)
(+165 files in other folders)
